--- a/Codigo/3.1.4/LivrosREST/gradle/wrapper/gradle-wrapper.properties
+++ b/Codigo/3.1.4/LivrosREST/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Nov 27 23:09:32 CET 2015
+#Sun Apr 24 16:13:56 BRT 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
