--- a/Curso_2016/Aula_1/Codigo/3.1.6/MinhasTarefas/build.gradle
+++ b/Curso_2016/Aula_1/Codigo/3.1.6/MinhasTarefas/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     testCompile "org.grails.plugins:geb"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
+    compile 'org.postgresql:postgresql:9.4-1201-jdbc41'
 }
 
 task wrapper(type: Wrapper) {
