--- a/Curso_2016/Aula_1/Codigo/3.1.6/MinhasTarefas/grails-app/conf/application.yml
+++ b/Curso_2016/Aula_1/Codigo/3.1.6/MinhasTarefas/grails-app/conf/application.yml
@@ -17,7 +17,10 @@ environments:
     development:
         dataSource:
             dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:postgresql://localhost:5432/minhasTarefas
+            driverClassName: org.postgresql.Driver
+            username: postgres
+            password: postgres
     test:
         dataSource:
             dbCreate: update
