--- a/Curso_2016/Aula_2/Codigo/3.1.6/MinhasTarefas/build.gradle
+++ b/Curso_2016/Aula_2/Codigo/3.1.6/MinhasTarefas/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
     compile 'org.postgresql:postgresql:9.4-1201-jdbc41'
     compile 'org.grails.plugins:spring-security-core:3.0.4'
+    compile 'org.grails.plugins:spring-security-ui:3.0.0.M2'
 }
 
 task wrapper(type: Wrapper) {
